--- a/ex1-google-fonts/style.css
+++ b/ex1-google-fonts/style.css
@@ -1,1 +1,7 @@
 /* Start coding here */
+
+/*@import url('https://fonts.googleapis.com/css2?family=Kodchasan:wght@300;400;500;700&display=swap');*/
+
+body {
+  font-family: 'Kodchasan', sans-serif;
+}
