--- a/ex2-web-fonts/style.css
+++ b/ex2-web-fonts/style.css
@@ -1,1 +1,10 @@
 /* Start coding here */
+@font-face {
+    font-family: ianCPU;
+    src: url('./fonts/2005_iannnnnCPU.ttf')
+}
+
+body {
+    font-family: ianCPU;
+    font-size: 30px;
+}
